# lottery_backend

./: .gitignore  AUTH_INTEGRATION_SUMMARY.md  DEPLOYMENT_GUIDE.md  DUPLICATE_PREVENTION_README.md  EMAIL_API_README.md  EMAIL_GENERATION_README.md  ENUM_IMPLEMENTATION_SUMMARY.md  FINAL_TEACHING_IMPORT_GUIDE.md  LOGIC_UPDATE_SUMMARY.md  MIGRATION_SUMMARY.md  NEW_FEATURES_SUMMARY.md  ORACLE_ENVIRONMENT_SETUP.md  ORACLE_INTEGRATION_README.md  ORACLE_STARTUP_SUMMARY.md  POSTGRESQL_JSON_FIX.md  PRIZE_SETTING_BUGFIX.md  QUICK_DEPLOY.md  README.md  REMOTE_DEPLOY_COMMANDS.md  UPDATED_LOGIC_README.md  UPDATE_EVENT_API_README.md  UPLOAD_TEST_GUIDE.md  VM_ORACLE_ENUM_DEPLOY.md  config.local.env  deploy.sh  email_api_examples.sh  generate_test_participants.py  oracle_fallback_patch.py  pyproject.toml  requirements.txt  start_server.sh  test_api_endpoints.py  test_duplicate_participants.py  test_email_api.py  test_email_fix.py  test_email_generation.py  test_final_teaching_import.py  test_name_filter_logic.py  test_new_features.py  test_oracle_connection.py  (+6 more)
db_migrations/: add_soft_delete_column.sql  add_type_column.sql  lottery_tables.sql  remove_old_tables.sql  users_table.sql
lottery_api/: config.py  main.py
lottery_api/business_model/: auth_business.py  email_business.py  lottery_business.py
lottery_api/data_access_object/: __init__.py  db.py  lottery_dao.py  users_dao.py
lottery_api/endpoints/: __init__.py  (+3 more)
scripts/: README_new_structure.md  create_lottery_events.py  generate_fake_students.py  generate_students.sh  reset_database.sh  run_migrations.sh  test_new_api.py
(+6 files in other folders)
