[tool.poetry]
name = "lottery_backend"
version = "0.1.0"
description = "Lottery backend API"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.20.0"
asyncpg = "^0.27.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.5"
openpyxl = "^3.1.0"
xlrd = "^2.0.1"
pandas = "1.5.3"
numpy = "^1.26.0"
faker = "^37.3.0"
fastapi = "^0.110.2"
cx-oracle = "^8.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
